@@ -319,6 +319,40 @@ public class WebPageTest extends HttpUnitTest {
      }
 
 
+    public void testMetaRefreshURLRequestNoDelay() throws Exception {
+        String refreshURL = getHostPath() + "/NextPage.html";
+        String page = "<html><head><title>Sample</title>" +
+                      "<meta Http-equiv=refresh content='URL=\"NextPage.html\"></head>\n" +
+                      "<body>This has no data\n" +
+                      "</body></html>\n";
+        defineResource( "SimplePage.html", page );
+
+        WebConversation wc = new WebConversation();
+        WebRequest request = new GetMethodWebRequest( getHostPath() + "/SimplePage.html" );
+        WebResponse simplePage = wc.getResponse( request );
+
+        assertEquals( "Refresh URL", refreshURL, simplePage.getRefreshRequest().getURL().toExternalForm() );
+        assertEquals( "Refresh delay", 0, simplePage.getRefreshDelay() );
+     }
+
+
+    public void testMetaRefreshURLRequestDelayOnly() throws Exception {
+        String refreshURL = getHostPath() + "/SimplePage.html";
+        String page = "<html><head><title>Sample</title>" +
+                      "<meta Http-equiv=refresh content='5'></head>\n" +
+                      "<body>This has no data\n" +
+                      "</body></html>\n";
+        defineResource( "SimplePage.html", page );
+
+        WebConversation wc = new WebConversation();
+        WebRequest request = new GetMethodWebRequest( getHostPath() + "/SimplePage.html" );
+        WebResponse simplePage = wc.getResponse( request );
+
+        assertEquals( "Refresh URL", refreshURL, simplePage.getRefreshRequest().getURL().toExternalForm() );
+        assertEquals( "Refresh delay", 5, simplePage.getRefreshDelay() );
+     }
+
+
     public void testAutoRefresh() throws Exception {
         String refreshURL = getHostPath() + "/NextPage.html";
         String page = "<html><head><title>Sample</title>" +
